crates/apollo-compiler/test_data/diagnostics/0102_invalid_string_values.txt
Error: expected value of type String, found Int
    ╭─[0102_invalid_string_values.graphql:71:31]
    │
  8 │   stringArgField(stringArg: String): String
    │                             ───┬──  
    │                                ╰──── expected type declared here as String
    │ 
 71 │     stringArgField(stringArg: 1)
    │                               ┬  
    │                               ╰── provided value is of Int type
────╯
Error: expected value of type String, found Float
    ╭─[0102_invalid_string_values.graphql:77:31]
    │
  8 │   stringArgField(stringArg: String): String
    │                             ───┬──  
    │                                ╰──── expected type declared here as String
    │ 
 77 │     stringArgField(stringArg: 1.0)
    │                               ─┬─  
    │                                ╰─── provided value is of Float type
────╯
Error: expected value of type String, found Boolean
    ╭─[0102_invalid_string_values.graphql:83:31]
    │
  8 │   stringArgField(stringArg: String): String
    │                             ───┬──  
    │                                ╰──── expected type declared here as String
    │ 
 83 │     stringArgField(stringArg: true)
    │                               ──┬─  
    │                                 ╰─── provided value is of Boolean type
────╯
Error: expected value of type String, found Enum
    ╭─[0102_invalid_string_values.graphql:89:31]
    │
  8 │   stringArgField(stringArg: String): String
    │                             ───┬──  
    │                                ╰──── expected type declared here as String
    │ 
 89 │     stringArgField(stringArg: BAR)
    │                               ─┬─  
    │                                ╰─── provided value is of Enum type
────╯
Error: expected value of type Int, found String
    ╭─[0102_invalid_string_values.graphql:95:25]
    │
  6 │   intArgField(intArg: Int): String
    │                       ─┬─  
    │                        ╰─── expected type declared here as Int
    │ 
 95 │     intArgField(intArg: "3")
    │                         ─┬─  
    │                          ╰─── provided value is of String type
────╯
Error: int cannot represent non 32-bit signed integer value
     ╭─[0102_invalid_string_values.graphql:101:25]
     │
 101 │     intArgField(intArg: 829384293849283498239482938)
     │                         ─────────────┬─────────────  
     │                                      ╰─────────────── cannot be coerced to a 32-bit integer
─────╯
Error: expected value of type Int, found Enum
     ╭─[0102_invalid_string_values.graphql:107:25]
     │
   6 │   intArgField(intArg: Int): String
     │                       ─┬─  
     │                        ╰─── expected type declared here as Int
     │ 
 107 │     intArgField(intArg: FOO)
     │                         ─┬─  
     │                          ╰─── provided value is of Enum type
─────╯
Error: expected value of type Int, found Float
     ╭─[0102_invalid_string_values.graphql:113:25]
     │
   6 │   intArgField(intArg: Int): String
     │                       ─┬─  
     │                        ╰─── expected type declared here as Int
     │ 
 113 │     intArgField(intArg: 3.0)
     │                         ─┬─  
     │                          ╰─── provided value is of Float type
─────╯
Error: expected value of type Int, found Float
     ╭─[0102_invalid_string_values.graphql:119:25]
     │
   6 │   intArgField(intArg: Int): String
     │                       ─┬─  
     │                        ╰─── expected type declared here as Int
     │ 
 119 │     intArgField(intArg: 3.333)
     │                         ──┬──  
     │                           ╰──── provided value is of Float type
─────╯
Error: expected value of type Float, found String
     ╭─[0102_invalid_string_values.graphql:125:29]
     │
  11 │   floatArgField(floatArg: Float): String
     │                           ──┬──  
     │                             ╰──── expected type declared here as Float
     │ 
 125 │     floatArgField(floatArg: "3.333")
     │                             ───┬───  
     │                                ╰───── provided value is of String type
─────╯
Error: expected value of type Float, found Boolean
     ╭─[0102_invalid_string_values.graphql:131:29]
     │
  11 │   floatArgField(floatArg: Float): String
     │                           ──┬──  
     │                             ╰──── expected type declared here as Float
     │ 
 131 │     floatArgField(floatArg: true)
     │                             ──┬─  
     │                               ╰─── provided value is of Boolean type
─────╯
Error: expected value of type Float, found Enum
     ╭─[0102_invalid_string_values.graphql:137:29]
     │
  11 │   floatArgField(floatArg: Float): String
     │                           ──┬──  
     │                             ╰──── expected type declared here as Float
     │ 
 137 │     floatArgField(floatArg: FOO)
     │                             ─┬─  
     │                              ╰─── provided value is of Enum type
─────╯
Error: expected value of type Boolean, found Int
     ╭─[0102_invalid_string_values.graphql:143:33]
     │
   9 │   booleanArgField(booleanArg: Boolean): String
     │                               ───┬───  
     │                                  ╰───── expected type declared here as Boolean
     │ 
 143 │     booleanArgField(booleanArg: 2)
     │                                 ┬  
     │                                 ╰── provided value is of Int type
─────╯
Error: expected value of type Boolean, found Float
     ╭─[0102_invalid_string_values.graphql:149:33]
     │
   9 │   booleanArgField(booleanArg: Boolean): String
     │                               ───┬───  
     │                                  ╰───── expected type declared here as Boolean
     │ 
 149 │     booleanArgField(booleanArg: 1.0)
     │                                 ─┬─  
     │                                  ╰─── provided value is of Float type
─────╯
Error: expected value of type Boolean, found String
     ╭─[0102_invalid_string_values.graphql:155:33]
     │
   9 │   booleanArgField(booleanArg: Boolean): String
     │                               ───┬───  
     │                                  ╰───── expected type declared here as Boolean
     │ 
 155 │     booleanArgField(booleanArg: "true")
     │                                 ───┬──  
     │                                    ╰──── provided value is of String type
─────╯
Error: expected value of type Boolean, found Enum
     ╭─[0102_invalid_string_values.graphql:161:33]
     │
   9 │   booleanArgField(booleanArg: Boolean): String
     │                               ───┬───  
     │                                  ╰───── expected type declared here as Boolean
     │ 
 161 │     booleanArgField(booleanArg: TRUE)
     │                                 ──┬─  
     │                                   ╰─── provided value is of Enum type
─────╯
Error: expected value of type ID, found Float
     ╭─[0102_invalid_string_values.graphql:167:23]
     │
  12 │   idArgField(idArg: ID): String
     │                     ─┬  
     │                      ╰── expected type declared here as ID
     │ 
 167 │     idArgField(idArg: 1.0)
     │                       ─┬─  
     │                        ╰─── provided value is of Float type
─────╯
Error: expected value of type ID, found Boolean
     ╭─[0102_invalid_string_values.graphql:173:23]
     │
  12 │   idArgField(idArg: ID): String
     │                     ─┬  
     │                      ╰── expected type declared here as ID
     │ 
 173 │     idArgField(idArg: true)
     │                       ──┬─  
     │                         ╰─── provided value is of Boolean type
─────╯
Error: expected value of type ID, found Enum
     ╭─[0102_invalid_string_values.graphql:179:23]
     │
  12 │   idArgField(idArg: ID): String
     │                     ─┬  
     │                      ╰── expected type declared here as ID
     │ 
 179 │     idArgField(idArg: SOMETHING)
     │                       ────┬────  
     │                           ╰────── provided value is of Enum type
─────╯
Error: expected value of type DogCommand, found Int
     ╭─[0102_invalid_string_values.graphql:186:33]
     │
  47 │   doesKnowCommand(dogCommand: DogCommand): Boolean
     │                               ─────┬────  
     │                                    ╰────── expected type declared here as DogCommand
     │ 
 186 │     doesKnowCommand(dogCommand: 2)
     │                                 ┬  
     │                                 ╰── provided value is of Int type
─────╯
Error: expected value of type DogCommand, found Float
     ╭─[0102_invalid_string_values.graphql:192:33]
     │
  47 │   doesKnowCommand(dogCommand: DogCommand): Boolean
     │                               ─────┬────  
     │                                    ╰────── expected type declared here as DogCommand
     │ 
 192 │     doesKnowCommand(dogCommand: 1.0)
     │                                 ─┬─  
     │                                  ╰─── provided value is of Float type
─────╯
Error: expected value of type DogCommand, found String
     ╭─[0102_invalid_string_values.graphql:198:33]
     │
  47 │   doesKnowCommand(dogCommand: DogCommand): Boolean
     │                               ─────┬────  
     │                                    ╰────── expected type declared here as DogCommand
     │ 
 198 │     doesKnowCommand(dogCommand: "SIT")
     │                                 ──┬──  
     │                                   ╰──── provided value is of String type
─────╯
Error: expected value of type DogCommand, found Boolean
     ╭─[0102_invalid_string_values.graphql:204:33]
     │
  47 │   doesKnowCommand(dogCommand: DogCommand): Boolean
     │                               ─────┬────  
     │                                    ╰────── expected type declared here as DogCommand
     │ 
 204 │     doesKnowCommand(dogCommand: true)
     │                                 ──┬─  
     │                                   ╰─── provided value is of Boolean type
─────╯
Error: value `JUGGLE` does not exist on `DogCommand`
     ╭─[0102_invalid_string_values.graphql:210:33]
     │
  40 │ ╭─▶ enum DogCommand {
     ┆ ┆   
  44 │ ├─▶ }
     │ │       
     │ ╰─────── enum defined here
     │ 
 210 │         doesKnowCommand(dogCommand: JUGGLE)
     │                                     ───┬──  
     │                                        ╰──── value does not exist on `DogCommand` enum
─────╯
Error: value `sit` does not exist on `DogCommand`
     ╭─[0102_invalid_string_values.graphql:216:33]
     │
  40 │ ╭─▶ enum DogCommand {
     ┆ ┆   
  44 │ ├─▶ }
     │ │       
     │ ╰─────── enum defined here
     │ 
 216 │         doesKnowCommand(dogCommand: sit)
     │                                     ─┬─  
     │                                      ╰─── value does not exist on `DogCommand` enum
─────╯
Error: expected value of type String, found Int
     ╭─[0102_invalid_string_values.graphql:222:47]
     │
  13 │   stringListArgField(stringListArg: [String]): String
     │                                     ────┬───  
     │                                         ╰───── expected type declared here as String
     │ 
 222 │     stringListArgField(stringListArg: ["one", 2])
     │                                               ┬  
     │                                               ╰── provided value is of Int type
─────╯
Error: expected value of type [String], found Int
     ╭─[0102_invalid_string_values.graphql:228:39]
     │
  13 │   stringListArgField(stringListArg: [String]): String
     │                                     ────┬───  
     │                                         ╰───── expected type declared here as [String]
     │ 
 228 │     stringListArgField(stringListArg: 1)
     │                                       ┬  
     │                                       ╰── provided value is of Int type
─────╯
Error: expected value of type Int!, found String
     ╭─[0102_invalid_string_values.graphql:235:24]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                                  ──┬─  
     │                                    ╰─── expected type declared here as Int!
     │ 
 235 │     multipleReqs(req2: "two", req1: "one")
     │                        ──┬──  
     │                          ╰──── provided value is of String type
─────╯
Error: expected value of type Int!, found String
     ╭─[0102_invalid_string_values.graphql:235:37]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                      ──┬─  
     │                        ╰─── expected type declared here as Int!
     │ 
 235 │     multipleReqs(req2: "two", req1: "one")
     │                                     ──┬──  
     │                                       ╰──── provided value is of String type
─────╯
Error: the required argument `ComplicatedArgs.multipleReqs(req2:)` is not provided
     ╭─[0102_invalid_string_values.graphql:241:5]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                            ─────┬────  
     │                                 ╰────── argument defined here
     │ 
 241 │     multipleReqs(req1: "one")
     │     ────────────┬────────────  
     │                 ╰────────────── missing value for argument `req2`
─────╯
Error: expected value of type Int!, found String
     ╭─[0102_invalid_string_values.graphql:241:24]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                      ──┬─  
     │                        ╰─── expected type declared here as Int!
     │ 
 241 │     multipleReqs(req1: "one")
     │                        ──┬──  
     │                          ╰──── provided value is of String type
─────╯
Error: the required argument `ComplicatedArgs.multipleReqs(req1:)` is not provided
     ╭─[0102_invalid_string_values.graphql:247:5]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                ─────┬────  
     │                     ╰────── argument defined here
     │ 
 247 │     multipleReqs(req1: null)
     │     ────────────┬───────────  
     │                 ╰───────────── missing value for argument `req1`
─────╯
Error: the required argument `ComplicatedArgs.multipleReqs(req2:)` is not provided
     ╭─[0102_invalid_string_values.graphql:247:5]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                            ─────┬────  
     │                                 ╰────── argument defined here
     │ 
 247 │     multipleReqs(req1: null)
     │     ────────────┬───────────  
     │                 ╰───────────── missing value for argument `req2`
─────╯
Error: expected value of type Int!, found Null
     ╭─[0102_invalid_string_values.graphql:247:24]
     │
  16 │   multipleReqs(req1: Int!, req2: Int!): String
     │                      ──┬─  
     │                        ╰─── expected type declared here as Int!
     │ 
 247 │     multipleReqs(req1: null)
     │                        ──┬─  
     │                          ╰─── provided value is of Null type
─────╯
Error: the required argument `ComplexInput.requiredField` is not provided
     ╭─[0102_invalid_string_values.graphql:254:33]
     │
  32 │   requiredField: Boolean!
     │   ───────────┬───────────  
     │              ╰───────────── argument defined here
     │ 
 254 │     complexArgField(complexArg: { intField: 4 })
     │                                 ───────┬───────  
     │                                        ╰───────── missing value for argument `requiredField`
─────╯
Error: expected value of type String, found Int
     ╭─[0102_invalid_string_values.graphql:261:32]
     │
  37 │   stringListField: [String]
     │                    ────┬───  
     │                        ╰───── expected type declared here as String
     │ 
 261 │       stringListField: ["one", 2],
     │                                ┬  
     │                                ╰── provided value is of Int type
─────╯
Error: expected value of type Boolean!, found Null
     ╭─[0102_invalid_string_values.graphql:271:7]
     │
  33 │   nonNullField: Boolean! = false
     │                 ────┬───  
     │                     ╰───── expected type declared here as Boolean!
     │ 
 271 │       nonNullField: null,
     │       ─────────┬────────  
     │                ╰────────── provided value is of Null type
─────╯
Error: field `invalidField` does not exist on `ComplexInput`
     ╭─[0102_invalid_string_values.graphql:280:7]
     │
  31 │ ╭─▶ input ComplexInput {
     ┆ ┆   
  38 │ ├─▶ }
     │ │       
     │ ╰─────── input object defined here
     │ 
 280 │           invalidField: "value"
     │           ──────────┬──────────  
     │                     ╰──────────── value does not exist on `ComplexInput` input object
─────╯
Error: expected value of type Boolean!, found String
     ╭─[0102_invalid_string_values.graphql:287:20]
     │
 287 │   dog @include(if: "yes") {
     │                    ──┬──  
     │                      ╰──── provided value is of String type
     │
     ├─[built_in.graphql:105:7]
     │
 105 │   if: Boolean!
     │       ────┬───  
     │           ╰───── expected type declared here as Boolean!
─────╯
Error: expected value of type Boolean!, found Enum
     ╭─[0102_invalid_string_values.graphql:288:20]
     │
 288 │     name @skip(if: ENUM)
     │                    ──┬─  
     │                      ╰─── provided value is of Enum type
     │
     ├─[built_in.graphql:99:7]
     │
  99 │   if: Boolean!
     │       ────┬───  
     │           ╰───── expected type declared here as Boolean!
─────╯
Error: expected value of type Int!, found Null
     ╭─[0102_invalid_string_values.graphql:294:14]
     │
 294 │   $a: Int! = null,
     │       ──┬─   ──┬─  
     │         ╰────────── expected type declared here as Int!
     │                │   
     │                ╰─── provided value is of Null type
─────╯
Error: expected value of type String!, found Null
     ╭─[0102_invalid_string_values.graphql:295:17]
     │
 295 │   $b: String! = null,
     │       ───┬───   ──┬─  
     │          ╰──────────── expected type declared here as String!
     │                   │   
     │                   ╰─── provided value is of Null type
─────╯
Error: the required argument `ComplexInput.requiredField` is not provided
     ╭─[0102_invalid_string_values.graphql:296:22]
     │
  32 │   requiredField: Boolean!
     │   ───────────┬───────────  
     │              ╰───────────── argument defined here
     │ 
 296 │   $c: ComplexInput = { requiredField: null, intField: null }
     │                      ───────────────────┬───────────────────  
     │                                         ╰───────────────────── missing value for argument `requiredField`
─────╯
Error: expected value of type Boolean!, found Null
     ╭─[0102_invalid_string_values.graphql:296:24]
     │
  32 │   requiredField: Boolean!
     │                  ────┬───  
     │                      ╰───── expected type declared here as Boolean!
     │ 
 296 │   $c: ComplexInput = { requiredField: null, intField: null }
     │                        ─────────┬─────────  
     │                                 ╰─────────── provided value is of Null type
─────╯
Error: expected value of type Int, found String
     ╭─[0102_invalid_string_values.graphql:306:13]
     │
 306 │   $a: Int = "one",
     │       ─┬─   ──┬──  
     │        ╰─────────── expected type declared here as Int
     │               │    
     │               ╰──── provided value is of String type
─────╯
Error: expected value of type String, found Int
     ╭─[0102_invalid_string_values.graphql:307:16]
     │
 307 │   $b: String = 4,
     │       ───┬──   ┬  
     │          ╰──────── expected type declared here as String
     │                │  
     │                ╰── provided value is of Int type
─────╯
Error: expected value of type ComplexInput, found String
     ╭─[0102_invalid_string_values.graphql:308:22]
     │
 308 │   $c: ComplexInput = "NotVeryComplex"
     │       ──────┬─────   ────────┬───────  
     │             ╰────────────────────────── expected type declared here as ComplexInput
     │                              │         
     │                              ╰───────── provided value is of String type
─────╯
Error: expected value of type Boolean!, found Int
     ╭─[0102_invalid_string_values.graphql:318:24]
     │
  32 │   requiredField: Boolean!
     │                  ────┬───  
     │                      ╰───── expected type declared here as Boolean!
     │ 
 318 │   $a: ComplexInput = { requiredField: 123, intField: "abc" }
     │                        ─────────┬────────  
     │                                 ╰────────── provided value is of Int type
─────╯
Error: expected value of type Int, found String
     ╭─[0102_invalid_string_values.graphql:318:44]
     │
  34 │   intField: Int
     │             ─┬─  
     │              ╰─── expected type declared here as Int
     │ 
 318 │   $a: ComplexInput = { requiredField: 123, intField: "abc" }
     │                                            ───────┬───────  
     │                                                   ╰───────── provided value is of String type
─────╯
Error: the required argument `ComplexInput.requiredField` is not provided
     ╭─[0102_invalid_string_values.graphql:326:22]
     │
  32 │   requiredField: Boolean!
     │   ───────────┬───────────  
     │              ╰───────────── argument defined here
     │ 
 326 │   $a: ComplexInput = {intField: 3}
     │                      ──────┬──────  
     │                            ╰──────── missing value for argument `requiredField`
─────╯
Error: expected value of type String, found Int
     ╭─[0102_invalid_string_values.graphql:335:26]
     │
 335 │   $a: [String] = ["one", 2]
     │       ────┬───           ┬  
     │           ╰───────────────── expected type declared here as String
     │                          │  
     │                          ╰── provided value is of Int type
─────╯

